--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background-color: blue;">
-    <h1 style="color: white;">Hello world!</h1>
+<body>
+    <h1>Hello world!</h1>
 </body>
 </html>
